packages/kit/test/apps/custom-layout/src/routes/errors/load-status-without-error-server.svelte
<script context="module">
	/** @type {import('@sveltejs/kit').Load} */
	export async function load() {
		return { status: 401 };
	}
</script>
